src/modules/ComboDashboard/components/TimeSliderToolbar/TimeSliderContainer/TimeSlider.scss
@import "../../../../../styles/base";

.timeSliderContainer {
    border-radius: 0;
    border-bottom: 1px solid rgb(209, 208, 208);
    width: 100%;
    padding-bottom: 35px;
}

.timeSliderGraph {
    canvas {
        position: relative;
        height: 70px;
        width: 100%;
        bottom: 10px;
    }
}

.globalTimeControls {
    padding-left: 3px;
    padding-bottom: 5px;
}

.timeSliderHeader {
    padding: 10px;
    display: flex;
    justify-content: space-between;

    .timeSliderTitle {
        color: $gold;
        flex-grow: 1;
    }

    .legend {
        display: flex;
        justify-content: center;
        align-items: center;
        flex-grow: 4;


        span {
            margin-right: 15px;
            margin-left: 5px;
        }

        .legendKey {
            height: 10px;
            width: 20px;
        }

        .slideLegendKey {
            background-color: #A9FFFB;
        }

        .connectionLegendKey {
            background-color: #D9AAFE;
        }

        .ropLegendKey  {
            background-color: #08BB00;
        }

        .lengthLegendKey {
            background-color: #967F2F;
        }
    }

    .timeSliderControls {
        display: flex;
        flex-grow: 2;
        flex: 2;
        justify-content: flex-end;
        margin-right: 15px;

        button {
            padding: 0;
            &:focus {
                outline: 0;
            }
        }

        .zoomControls {
            svg {
                margin-right: 10px;
            }
        }

        .timeControls {
            margin-left: 20px;

            svg {
                margin-right: 10px;
            }
        }
    }
}

.timeSliderView {
    display: flex;

    .timeSliderExpanded {
        color: $gold;
        bottom: 15px;
        width: 98%;
    }

    .timeSliderCollapsed {
        color: $gold;
        top: 20px;
        left: 50px;
        width: 93%;
    }

    .backwardTime {
        position: relative;

        > button {
            @extend .globalTimeControls;
        }
    }

    .expandedBackwardTime {
        left: 20px;
        top: 30px;
    }

    .collapsedBackwardTime {
        top: 8px;
        left: 30px;
    }

    .forwardTime {
        color: #000000;
        position: relative;
        display: block;

        > button {
            @extend .globalTimeControls;

        }
    }

    .expandedForwardTime {
        top: 30px;
        right: 10px;
    }

    .collapsedForwardTime {
        right: 25px;
        top: 7px;
    }
}

.timeSliderComponent {
    width: 100%;
}

